// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/pod/index getReleases processes real data from CDN 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "cdn.cocoapods.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://cdn.cocoapods.org/all_pods_versions_a_c_b.txt",
  },
]
`;

exports[`datasource/pod/index getReleases processes real data from Github 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/Artsy/Specs/contents/Specs/foo",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/Artsy/Specs/contents/Specs/a/c/b/foo",
  },
]
`;

exports[`datasource/pod/index getReleases returns null for 401 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "cdn.cocoapods.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://cdn.cocoapods.org/all_pods_versions_a_c_b.txt",
  },
]
`;

exports[`datasource/pod/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/foo/bar/contents/Specs/foo",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/foo/bar/contents/Specs/a/c/b/foo",
  },
]
`;

exports[`datasource/pod/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "cdn.cocoapods.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://cdn.cocoapods.org/all_pods_versions_a_c_b.txt",
  },
]
`;

exports[`datasource/pod/index getReleases throws for 429 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "cdn.cocoapods.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://cdn.cocoapods.org/all_pods_versions_a_c_b.txt",
  },
]
`;
